--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,5 @@
 name = sum_jetpack
 author = Sumi
 description = Adds a jetpack and fuel.
+depends = playerphysics
 optional_depends = default, mcl_core, mcl_wool, mcl_mobitems, mcl_player, sum_airship, sum_air_currents
